# tox-gh-actions

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  LICENSE  MANIFEST.in  README.md  azure-pipelines.yml  pyproject.toml  pytest.ini  readthedocs.yml  setup.cfg  setup.py  tox.ini
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/DISCUSSION_TEMPLATE/: q-a.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  question.md
.github/workflows/: codeql-analysis.yml  packaging.yml  pythonpackage.yml  pythontest.yml  tests.yml
src/tox_gh_actions/: __init__.py  matcher.json  plugin.py
tests/: conftest.py  test_integration.py  test_matcher.py  test_plugin.py
tests/integration/: test_tox_tox_gh_actions_int.py  tox.ini
tests/unit/: test_tox_tox_gh_actions.py  test_version.py
