[build-system]
requires = [
    # For PEP 517 and PEP 518 support
    # https://pip.pypa.io/en/stable/cli/pip/#pep-517-and-518-support
    # setuptools_scm v6 requires setuptools >= 45
    "setuptools >= 45",
    "setuptools_scm[toml] >= 7, <8",
    "wheel",
]
build-backend = 'setuptools.build_meta'

[tool.black]
target-version = ["py37", "py38", "py39", "py310", "py311"]

[tool.coverage.paths]
# For combining source file paths correctly
source = [
   "src",
   "*/site-packages",
]

[tool.mypy]
strict = true

[tool.pytest.ini_options]
markers = [
    "integration: mark as an integration test.",
]

[tool.setuptools_scm]
write_to = "src/tox_gh_actions/version.py"
