[build-system]
requires = [
    # For PEP 517 and PEP 518 support
    # https://pip.pypa.io/en/stable/cli/pip/#pep-517-and-518-support
    # setuptools_scm v6 requires setuptools >= 45
    "setuptools >= 45",
    "setuptools_scm[toml] >= 7, <8",
    "wheel",
]
build-backend = 'setuptools.build_meta'

[tool.coverage.paths]
# For combining source file paths correctly
source = [
   "src",
   "*/site-packages",
]

[tool.mypy]
strict = true

[tool.pytest.ini_options]
markers = [
    "integration: mark as an integration test.",
]

[tool.ruff]
target-version = "py37"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    "W",
    # Pyflakes
    "F",
    # pydocstyle
    "D",
    # isort
    "I",
    # pyupgrade
    "UP",
    # flake8-annotations
    "ANN",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-implicit-str-concat
    "ISC",
    # flake8-logging
    "LOG",
    # flake8-logging-format
    "G",
    # flake8-simplify
    "SIM",
    # Ruff-specific rules
    "RUF",
]
ignore = [
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D400",
    "D401",
    "D415",
]

[tool.ruff.lint.isort]
force-sort-within-sections = true

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    # flake8-bandit: assert
    "S101",
]

[tool.setuptools_scm]
write_to = "src/tox_gh_actions/version.py"
