[build-system]
requires = [
    # For PEP 517 and PEP 518 support
    # https://pip.pypa.io/en/stable/cli/pip/#pep-517-and-518-support
    # setuptools_scm v6 requires setuptools >= 45
    "setuptools >= 45",
    "setuptools_scm[toml] >= 7, <8",
    "wheel",
]
build-backend = 'setuptools.build_meta'

[project]
name = "tox-gh-actions"
description = "Seamless integration of tox into GitHub Actions"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Yusuke Miyazaki", email = "miyazaki.dev@gmail.com"},
]
maintainers = [
    {name = "Yusuke Miyazaki", email = "miyazaki.dev@gmail.com"},
]
keywords = ["tox", "github", "github-actions", "ci", "testing"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: tox",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Testing",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "tox >=4, <5",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/ymyzk/tox-gh-actions"
Issue = "https://github.com/ymyzk/tox-gh-actions/issues"
Sponsor = "https://github.com/sponsors/ymyzk"

[project.entry-points.tox]
tox_gh_actions = "tox_gh_actions.plugin"

[project.optional-dependencies]
testing = [
    "devpi-process",
    "mypy; platform_python_implementation=='CPython'",
    "pre-commit",
    "pytest >=7",
    "pytest-cov >=4",
    "pytest-mock >=3",
    "pytest-randomly >=3",
]

[tool.coverage.paths]
# For combining source file paths correctly
source = [
   "src",
   "*/site-packages",
]

[tool.mypy]
strict = true

[tool.pytest.ini_options]
markers = [
    "integration: mark as an integration test.",
]

[tool.ruff]
target-version = "py37"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    "W",
    # Pyflakes
    "F",
    # pydocstyle
    "D",
    # isort
    "I",
    # pyupgrade
    "UP",
    # flake8-annotations
    "ANN",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-implicit-str-concat
    "ISC",
    # flake8-logging
    "LOG",
    # flake8-logging-format
    "G",
    # flake8-simplify
    "SIM",
    # Ruff-specific rules
    "RUF",
]
ignore = [
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D400",
    "D401",
    "D415",
]

[tool.ruff.lint.isort]
force-sort-within-sections = true

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    # flake8-bandit: assert
    "S101",
]

[tool.setuptools_scm]
write_to = "src/tox_gh_actions/version.py"
