[metadata]
name = tox-gh-actions
description = Seamless integration of tox into GitHub Actions
long_description = file: README.md
long_description_content_type = text/markdown
keywords = virtual, environments, isolated, testing
maintainer = Yusuke Miyazaki
maintainer_email = miyazaki.dev@gmail.com
author = Yusuke Miyazaki
author_email = miyazaki.dev@gmail.com
url = https://github.com/ymyzk/tox-gh-actions
project_urls =
    Source=https://github.com/ymyzk/tox-gh-actions
    Tracker=https://github.com/ymyzk/tox-gh-actions/issues
platforms = any
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Framework :: tox
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Software Development :: Testing
    Topic :: Software Development :: Libraries
    Topic :: Utilities
    Typing :: Typed

[options]
packages = find:
package_dir =
  =src
zip_safe = True
python_requires = >=3.7
install_requires =
    tox >= 4.0.0a9, <5
setup_requires =
    setuptools_scm[toml] >=6, <7

[options.packages.find]
where = src

[options.entry_points]
tox =
    tox_gh_actions=tox_gh_actions.plugin

[options.extras_require]
testing =
    black; platform_python_implementation=='CPython'
    flake8 >=3, <4
    mypy; platform_python_implementation=='CPython'
    # Needs pytest 6.2.5 or later for Python 3.10 support
    pytest >=6.2.5, <7
    pytest-cov >=2, <3
    pytest-mock >=3, <4
    pytest-randomly >=3

[options.package_data]
tox_gh_actions =
    py.typed

[bdist_wheel]
universal = 1

[tox:tox]
minversion = 3.7
isolated_build = true
skip_missing_interpreters = true
envlist =
    black
    flake8
    mypy
    {py37,py38,py39,py310,pypy2,pypy3}-toxlatest

[gh-actions]
python =
    3.7: py37
    3.8: py38, black, flake8
    3.9: py39, mypy
    3.10: py310
    pypy-2: pypy2
    pypy-3: pypy3

[testenv]
description = run test suite under {basepython}
extras = testing
commands = pytest --cov=tox_gh_actions --cov-branch --cov-report=term --cov-report=xml tests/ {posargs}

[testenv:black]
description = run black with check-only under {basepython}
commands = black --check src/ tests/ setup.py
extras = testing

[testenv:flake8]
description = run flake8 under {basepython}
commands = flake8 src/ tests/ setup.py
extras = testing

[testenv:mypy]
description = run mypy under {basepython}
commands = mypy src/ tests/
extras = testing

[flake8]
max-line-length = 88

[mypy]
ignore_missing_imports = True
