[metadata]
name = tox-gh-actions
description = Seamless integration of tox into GitHub Actions
long_description = file: README.md
long_description_content_type = text/markdown
keywords = virtual, environments, isolated, testing
maintainer = Yusuke Miyazaki
maintainer_email = miyazaki.dev@gmail.com
author = Yusuke Miyazaki
author_email = miyazaki.dev@gmail.com
url = https://github.com/ymyzk/tox-gh-actions
project_urls =
    Source=https://github.com/ymyzk/tox-gh-actions
    Tracker=https://github.com/ymyzk/tox-gh-actions/issues
platforms = any
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: tox
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Software Development :: Testing
    Topic :: Software Development :: Libraries
    Topic :: Utilities
    Typing :: Typed

[options]
packages = find:
package_dir =
  =src
zip_safe = True
python_requires = >=3.7
install_requires =
    tox >= 4, <5

[options.packages.find]
where = src

[options.entry_points]
tox =
    tox_gh_actions=tox_gh_actions.plugin

[options.extras_require]
testing =
    black; platform_python_implementation=='CPython'
    devpi-process
    # flake8 6.x or later requires Python 3.8 or later.
    # tox 4.x requires a newer version of importlib-metadata
    # but flake8 5.x requires an older version of it.
    flake8 >=6, <7; python_version>='3.8'
    mypy; platform_python_implementation=='CPython'
    pytest >=7, <8
    pytest-cov >=3, <4
    pytest-mock >=3, <4
    pytest-randomly >=3

[options.package_data]
tox_gh_actions =
    py.typed

[bdist_wheel]
universal = 1

[tox:tox]
minversion = 4.0
isolated_build = true
skip_missing_interpreters = true
envlist =
    black
    flake8
    mypy
    {py37,py38,py39,py310,py311,py312,py313,pypy3}-toxlatest

[gh-actions]
python =
    3.7: py37
    3.8: py38
    3.9: py39
    3.10: py310
    3.11: py311, black, flake8, mypy
    3.12: py312
    3.13: py313
    pypy-3: pypy3

[testenv]
description = run test suite under {basepython}
extras = testing
commands = pytest --cov=tox_gh_actions --cov-branch --cov-report=term --cov-report=xml tests/ {posargs}

[testenv:black]
description = run black with check-only under {basepython}
commands = black --check src/ tests/ setup.py
extras = testing

[testenv:flake8]
description = run flake8 under {basepython}
commands = flake8 src/ tests/ setup.py
extras = testing

[testenv:mypy]
description = run mypy under {basepython}
commands = mypy src/ tests/
extras = testing

[flake8]
max-line-length = 88
