[metadata]
name = tox-gh-actions
description = Seamless integration of tox into GitHub Actions
long_description = file: README.md
long_description_content_type = text/markdown
keywords = virtual, environments, isolated, testing
maintainer = Yusuke Miyazaki
maintainer_email = miyazaki.dev@gmail.com
author = Yusuke Miyazaki
author_email = miyazaki.dev@gmail.com
url = https://github.com/ymyzk/tox-gh-actions
project_urls =
    Source=https://github.com/ymyzk/tox-gh-actions
    Tracker=https://github.com/ymyzk/tox-gh-actions/issues
platforms = any
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: tox
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Software Development :: Testing
    Topic :: Software Development :: Libraries
    Topic :: Utilities
    Typing :: Typed

[options]
packages = find:
package_dir =
  =src
zip_safe = True
python_requires = >=3.7
install_requires =
    tox >= 4, <5

[options.packages.find]
where = src

[options.entry_points]
tox =
    tox_gh_actions=tox_gh_actions.plugin

[options.extras_require]
testing =
    devpi-process
    mypy; platform_python_implementation=='CPython'
    pre-commit
    pytest >=7
    pytest-cov >=4
    pytest-mock >=3
    pytest-randomly >=3

[options.package_data]
tox_gh_actions =
    py.typed

[bdist_wheel]
universal = 1

[tox:tox]
minversion = 4.0
isolated_build = true
skip_missing_interpreters = true
envlist =
    mypy
    pre-commit
    {py37,py38,py39,py310,py311,py312,py313,pypy3}-toxlatest

[gh-actions]
python =
    3.7: py37
    3.8: py38
    3.9: py39
    3.10: py310
    3.11: py311, mypy
    3.12: py312
    3.13: py313, pre-commit
    pypy-3: pypy3

[testenv]
description = run test suite under {basepython}
extras = testing
commands = pytest --cov=tox_gh_actions --cov-branch --cov-report=term --cov-report=xml tests/ {posargs}

[testenv:mypy]
description = run mypy under {basepython}
commands = mypy src/ tests/
extras = testing

[testenv:pre-commit]
description = run pre-commit under {basepython}
commands = pre-commit run --all-files
extras = testing
